--- a/Assignment_1.ipynb
+++ b/Assignment_1.ipynb
@@ -220,7 +220,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "c003eced-b580-4e87-d6df-1688739f00bd"
+        "outputId": "fe452c61-8c3b-45c5-ff23-3f308c23d9b0"
       },
       "source": [
         "from collections import defaultdict\n",
@@ -295,33 +295,32 @@
         "\n",
         "  # TODO\n",
         "  tweets = read_tweets(data_file_path)\n",
-        "\n",
-        "\n",
-        "    \n",
-        "\n",
-        "\n",
-        "r = build_probs_model(2, None, [\"123456\"], None)\n",
-        "\n",
-        "r"
+        "  return build_probs_model(n, vocabulary, tweets, add_one)"
       ],
-      "execution_count": 56,
+      "execution_count": 62,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "{'1': {'2': 1.0},\n",
-              " '2': {'3': 1.0},\n",
-              " '3': {'4': 1.0},\n",
-              " '4': {'5': 1.0},\n",
-              " '5': {'6': 1.0},\n",
-              " '<START>': {'1': 1.0}}"
+              "{'1': {'1': 0.2, '2': 0.2, '3': 0.2, '6': 0.2, '9': 0.2},\n",
+              " '2': {'1': 0.3333333333333333,\n",
+              "  '3': 0.3333333333333333,\n",
+              "  '9': 0.3333333333333333},\n",
+              " '3': {'1': 0.25, '4': 0.25, '6': 0.25, '9': 0.25},\n",
+              " '4': {'1': 0.3333333333333333,\n",
+              "  '5': 0.3333333333333333,\n",
+              "  '9': 0.3333333333333333},\n",
+              " '5': {'1': 0.3333333333333333,\n",
+              "  '6': 0.3333333333333333,\n",
+              "  '9': 0.3333333333333333},\n",
+              " '<START>': {'1': 0.8, '9': 0.2}}"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 56
+          "execution_count": 62
         }
       ]
     },
