--- a/Assignment_1.ipynb
+++ b/Assignment_1.ipynb
@@ -216,11 +216,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "kMC_u8eQbVvZ",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "fe452c61-8c3b-45c5-ff23-3f308c23d9b0"
+        "id": "kMC_u8eQbVvZ"
       },
       "source": [
         "from collections import defaultdict\n",
@@ -297,32 +293,8 @@
         "  tweets = read_tweets(data_file_path)\n",
         "  return build_probs_model(n, vocabulary, tweets, add_one)"
       ],
-      "execution_count": 62,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "{'1': {'1': 0.2, '2': 0.2, '3': 0.2, '6': 0.2, '9': 0.2},\n",
-              " '2': {'1': 0.3333333333333333,\n",
-              "  '3': 0.3333333333333333,\n",
-              "  '9': 0.3333333333333333},\n",
-              " '3': {'1': 0.25, '4': 0.25, '6': 0.25, '9': 0.25},\n",
-              " '4': {'1': 0.3333333333333333,\n",
-              "  '5': 0.3333333333333333,\n",
-              "  '9': 0.3333333333333333},\n",
-              " '5': {'1': 0.3333333333333333,\n",
-              "  '6': 0.3333333333333333,\n",
-              "  '9': 0.3333333333333333},\n",
-              " '<START>': {'1': 0.8, '9': 0.2}}"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 62
-        }
-      ]
+      "execution_count": 63,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -346,9 +318,24 @@
         "  # model - the dictionary (model) to use for calculating perplexity\n",
         "  # data_file - the tweets file that you wish to claculate a perplexity score for\n",
         "\n",
-        "  # TODO"
+        "  # TODO\n",
+        "  entropy_sum = 0.0\n",
+        "  if n == 1:\n",
+        "    \n",
+        "    for prob in model.values():\n",
+        "      entropy_sum += prob * np.log2(prob)\n",
+        "  else:\n",
+        "    for _, next_probs in model.items():\n",
+        "      for prob in next_probs.values():\n",
+        "        entropy_sum += prob * np.log2(prob)\n",
+        "    \n",
+        "  entropy = -1 * entropy_sum\n",
+        "\n",
+        "  return np.power(2, entropy)\n",
+        "\n",
+        "(1, {\"a\": 0.3, \"b\": 0.4, \"c\": 0.3})"
       ],
-      "execution_count": null,
+      "execution_count": 65,
       "outputs": []
     },
     {
