--- a/Assignment_1.ipynb
+++ b/Assignment_1.ipynb
@@ -66,17 +66,22 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "a32d8d04-b767-48a6-86ad-a560090d4a8c"
+        "outputId": "faf2af88-4a85-4fd4-f953-86cbb77d5b0b"
       },
       "source": [
         "!git clone https://github.com/kfirbar/nlp-course.git"
       ],
-      "execution_count": 2,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "fatal: destination path 'nlp-course' already exists and is not an empty directory.\n"
+            "Cloning into 'nlp-course'...\n",
+            "remote: Enumerating objects: 53, done.\u001b[K\n",
+            "remote: Counting objects: 100% (53/53), done.\u001b[K\n",
+            "remote: Compressing objects: 100% (42/42), done.\u001b[K\n",
+            "remote: Total 53 (delta 23), reused 32 (delta 8), pack-reused 0\u001b[K\n",
+            "Unpacking objects: 100% (53/53), done.\n"
           ],
           "name": "stdout"
         }
@@ -108,13 +113,13 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "QYdhPfbAGkip",
-        "outputId": "2b73a60d-0919-43d5-c5b0-e14c94ba4f81"
+        "outputId": "4a4d5c56-4508-4cf2-ec80-2f3d701a3b45"
       },
       "source": [
         "\n",
         "!ls nlp-course/lm-languages-data-new\n"
       ],
-      "execution_count": 3,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
@@ -148,6 +153,7 @@
         "import io\n",
         "import pathlib\n",
         "import pandas as pd\n",
+        "import json \n",
         "\n",
         "folder = 'nlp-course/lm-languages-data-new'\n",
         "\n",
@@ -172,14 +178,11 @@
         "    tweets = read_tweets(file_path)\n",
         "\n",
         "    vocab.update({word for tweet in tweets for word in tweet.lower()})\n",
-        "  \n",
         "\n",
-        "    \n",
-        "  \n",
         "  return vocab\n",
         "        "
       ],
-      "execution_count": 44,
+      "execution_count": 13,
       "outputs": []
     },
     {
@@ -293,7 +296,7 @@
         "  tweets = read_tweets(data_file_path)\n",
         "  return build_probs_model(n, vocabulary, tweets, add_one)"
       ],
-      "execution_count": 63,
+      "execution_count": 14,
       "outputs": []
     },
     {
@@ -319,23 +322,24 @@
         "  # data_file - the tweets file that you wish to claculate a perplexity score for\n",
         "\n",
         "  # TODO\n",
+        "\n",
+        "  other_model = lm(n, vocabulary, data_file, False)\n",
+        "\n",
         "  entropy_sum = 0.0\n",
         "  if n == 1:\n",
-        "    \n",
-        "    for prob in model.values():\n",
-        "      entropy_sum += prob * np.log2(prob)\n",
+        "    for token, prob in other_model.items():\n",
+        "      entropy_sum += prob * np.log2(model[token] if token in model else 0.0)\n",
         "  else:\n",
-        "    for _, next_probs in model.items():\n",
-        "      for prob in next_probs.values():\n",
-        "        entropy_sum += prob * np.log2(prob)\n",
+        "    for prefix_tokens, next_probs in model.items():\n",
+        "      for token, prob in next_probs.items():\n",
+        "        other_prob = model[prefix_tokens][token] if prefix_tokens in model and token in model[prefix_tokens] else 0.0\n",
+        "        entropy_sum += prob * np.log2(other_prob)\n",
         "    \n",
         "  entropy = -1 * entropy_sum\n",
         "\n",
-        "  return np.power(2, entropy)\n",
-        "\n",
-        "(1, {\"a\": 0.3, \"b\": 0.4, \"c\": 0.3})"
+        "  return np.power(2, entropy)"
       ],
-      "execution_count": 65,
+      "execution_count": 15,
       "outputs": []
     },
     {
@@ -352,17 +356,50 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "caAxLE9s_fvn"
+        "id": "caAxLE9s_fvn",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "1bfe727f-d994-4771-b597-92e93ae16af6"
       },
       "source": [
         "def match(n, add_one):\n",
         "  # n - the n-gram to use for creating n-gram models\n",
         "  # add_one - use add_one smoothing or not\n",
         "\n",
-        "  #TODO"
+        "  vocabulary = preprocess()\n",
+        "\n",
+        "  language_to_model = {}\n",
+        "  for file_name in os.listdir(folder):\n",
+        "    language = os.path.splitext(file_name)[0]\n",
+        "    if language in language_to_model or 'test' in language:\n",
+        "      continue\n",
+        "    \n",
+        "    print(language)\n",
+        "    file_path = os.path.join(folder, file_name)\n",
+        "\n",
+        "    model = lm(n, vocabulary, file_path, add_one)\n",
+        "    language_to_model[language] = model \n",
+        "\n",
+        "match(2, False) "
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 18,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "pt\n",
+            "en\n",
+            "tl\n",
+            "fr\n",
+            "in\n",
+            "it\n",
+            "nl\n",
+            "es\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "markdown",
