--- a/Assignment_3_NER.ipynb
+++ b/Assignment_3_NER.ipynb
@@ -43,9 +43,10 @@
       },
       "source": [
         "import torch\n",
-        "import torch.nn as nn\n"
+        "import torch.nn as nn\n",
+        "import numpy as np "
       ],
-      "execution_count": 1,
+      "execution_count": 14,
       "outputs": []
     },
     {
@@ -76,22 +77,41 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "pyx6__ridAwF"
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 0
+        },
+        "id": "pyx6__ridAwF",
+        "outputId": "3a15bda4-f5a1-4fb9-8b8e-a652e674e946"
       },
       "source": [
         "!git clone https://github.com/kfirbar/nlp-course"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Cloning into 'nlp-course'...\n",
+            "remote: Enumerating objects: 58, done.\u001b[K\n",
+            "remote: Counting objects: 100% (58/58), done.\u001b[K\n",
+            "remote: Compressing objects: 100% (47/47), done.\u001b[K\n",
+            "remote: Total 58 (delta 24), reused 31 (delta 8), pack-reused 0\u001b[K\n",
+            "Unpacking objects: 100% (58/58), done.\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "prgzgtt8Jw4Y",
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 0
         },
-        "outputId": "83c8ae37-5da5-4072-abb5-da45f1094cb9"
+        "outputId": "0a653010-26cf-4d8e-b0b1-6d00f0e90d9e"
       },
       "source": [
         "def read_data(filepath):\n",
@@ -121,7 +141,7 @@
         "dev = read_data('/content/nlp-course/connl03_dev.txt')\n",
         "len(train), len(dev), len(test)"
       ],
-      "execution_count": 7,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -133,7 +153,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 7
+          "execution_count": 4
         }
       ]
     },
@@ -179,7 +199,7 @@
         "        return self.word2id[w]\n",
         "            "
       ],
-      "execution_count": 9,
+      "execution_count": 5,
       "outputs": []
     },
     {
@@ -205,7 +225,7 @@
         "\n",
         "  "
       ],
-      "execution_count": 10,
+      "execution_count": 6,
       "outputs": []
     },
     {
@@ -213,12 +233,12 @@
       "metadata": {
         "id": "noIY3zWKvhBd",
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 0
         },
-        "outputId": "40d5e4df-1e45-4e1c-b707-8ea527708717"
+        "outputId": "09e15258-24e3-4fc2-ba68-a579016c84e5"
       },
       "source": [
-        "\n",
         "\n",
         "def prepare_data(data, vocab):\n",
         "    data_sequences = []\n",
@@ -238,7 +258,7 @@
         "\n",
         "len(train_sequences), len(dev_sequences), len(test_sequences)"
       ],
-      "execution_count": 12,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -250,18 +270,19 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 12
+          "execution_count": 7
         }
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "dldAkGL_epHz",
-        "outputId": "499d96de-a1af-4446-af0b-a950ceb2b334",
         "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
+          "base_uri": "https://localhost:8080/",
+          "height": 0
+        },
+        "id": "dldAkGL_epHz",
+        "outputId": "499d96de-a1af-4446-af0b-a950ceb2b334"
       },
       "source": [
         "train_sequences[0:1], train[0:1]"
@@ -321,11 +342,17 @@
         "        self.out = nn.Linear(hidden_size, output_size)\n",
         "    \n",
         "    def forward(self, input_sentence):\n",
-        "        # TODO: your code...\n",
-        "        return output\n",
-        "    "
+        "\n",
+        "        input = input_sentence.reshape(-1, input_sentence.shape[0])\n",
+        "        embeddings = self.embedding(input)\n",
+        "\n",
+        "        lstm_out, _ = self.lstm(embeddings)\n",
+        "\n",
+        "        output = self.out(lstm_out)\n",
+        "\n",
+        "        return output\n"
       ],
-      "execution_count": null,
+      "execution_count": 9,
       "outputs": []
     },
     {
@@ -343,7 +370,7 @@
         "id": "avkHfjT3k0HM"
       },
       "source": [
-        "def train_loop(model, n_epochs):\n",
+        "def train_loop(model, n_epochs, trainning_data):\n",
         "  # Loss function\n",
         "  criterion = nn.CrossEntropyLoss()\n",
         "\n",
@@ -351,8 +378,41 @@
         "  optimizer = torch.optim.Adam(model.parameters(), lr=0.0001)\n",
         "  \n",
         "  for e in range(1, n_epochs + 1):\n",
-        "    # TODO - your code goes here...\n",
-        "\n"
+        "    \n",
+        "    for (words_ids, tags_ids) in trainning_data:\n",
+        "      words_ids = torch.from_numpy(np.array(words_ids))\n",
+        "      target = torch.from_numpy(np.array(tags_ids)).reshape(1, len(tags_ids))\n",
+        "      res = model(words_ids)\n",
+        "      res = torch.transpose(res, 1, 2)\n",
+        "      loss = criterion(res, target)\n",
+        "\n",
+        "      optimizer.zero_grad()\n",
+        "      loss.backward()\n",
+        "      optimizer.step()\n",
+        "\n",
+        "#test#test#test#test#test#test#test#test\n",
+        "model = NERNet(len(vocab.id2word), 300, 500, len(vocab.tag2id), 1, 1)\n",
+        "model.train()\n",
+        "#train_loop(model, 3, train_sequences)\n",
+        "criterion = nn.CrossEntropyLoss()\n",
+        "\n",
+        "  # Optimizer (ADAM is a fancy version of SGD)\n",
+        "optimizer = torch.optim.Adam(model.parameters(), lr=0.0001)\n",
+        "n_epochs =  3\n",
+        "trainning_data = train_sequences\n",
+        "for e in range(1, n_epochs + 1):\n",
+        "    \n",
+        "  for (words_ids, tags_ids) in trainning_data:\n",
+        "    words_ids = torch.from_numpy(np.array(words_ids))\n",
+        "    target = torch.from_numpy(np.array(tags_ids)).reshape(1, len(tags_ids))\n",
+        "    res = model(words_ids)\n",
+        "    res = torch.transpose(res, 1, 2)\n",
+        "\n",
+        "    loss = criterion(res, target)\n",
+        "\n",
+        "    optimizer.zero_grad()\n",
+        "    loss.backward()\n",
+        "    optimizer.step()"
       ],
       "execution_count": null,
       "outputs": []
@@ -372,11 +432,25 @@
         "id": "iyQAjGaqmd8U"
       },
       "source": [
-        "def evaluate(model, caption):\n",
+        "def evaluate(model, caption, test_data):\n",
         "  # TODO - your code goes here\n",
-        "  print(...)"
+        "  model.eval()\n",
+        "\n",
+        "  predictions = []\n",
+        "  labels = []\n",
+        "  with torch.no_grad():\n",
+        "\n",
+        "    for (words_ids, tags_ids) in trainning_data:\n",
+        "      words_ids = torch.from_numpy(np.array(words_ids))\n",
+        "      res = model(words_ids)\n",
+        "      probs = torch.softmax(res, dim=2)\n",
+        "      predicted_labels = torch.argmax(probs, dim=2)\n",
+        "      predictions.extend(predicted_labels.detch().numpy().tolist())\n",
+        "      labels.extend(tags_ids)\n",
+        "\n",
+        "evaluate\n"
       ],
-      "execution_count": null,
+      "execution_count": 12,
       "outputs": []
     },
     {
